Removed all Eclipse warnings and SonarLint issues
Former-commit-id: 9a327a17247e0143bdf1e743f7acb365c0f7b148